--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1>RUN BUDDY</h1>
-        What it Do!!🏃
+        What We Do What You Do Your Traines Reach Ou!!🏃
     </body>
 </html>
