--- a/index.html
+++ b/index.html
@@ -5,7 +5,37 @@
         <title>Run Buddy</title>
     </head>
     <body>
-        <h1>RUN BUDDY</h1>
-        What We Do What You Do Your Traines Reach Ou!!🏃
+        <header>
+            <h1>RUN BUDDY</h1>
+        </header>
+       <!--hero/jumbortron -->
+       <section>
+       </section>
+
+       <!--"What we do" section-->
+       <section>
+           <h2>What We Do</h2>
+       </section>
+
+       <!--"what you do"  -->
+       <section>
+           <h2>What You Do</h2>
+       </section>
+
+       <!--  "meet thre trainers" section -->
+       <section>
+           <h2>Meet The Trainers</h2>
+       </section>
+    
+       <!--"reach out" sectopm-->
+       <section>
+           <h2>Reach Out</h2>
+       </section>
+
+       <!--footer-->
+       <footer>
+           <h2>❤️ Mad with love by Run Buddy.</h2>
+       </footer>
+
     </body>
 </html>
